--- a/package.json
+++ b/package.json
@@ -8,6 +8,10 @@
     "typecheck": "tsc"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^6.7.2",
+    "@fortawesome/free-solid-svg-icons": "^6.7.2",
+    "@fortawesome/react-fontawesome": "^0.2.2",
+    "@heroicons/react": "^2.2.0",
     "@huggingface/transformers": "^3.2.4",
     "@netlify/functions": "^1.4.0",
     "@remix-run/netlify": "^1.15.0",
