--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@xenova/transformers": "^2.17.2",
     "cross-env": "^7.0.3",
     "daisyui": "^2.51.6",
+    "ioredis": "^5.4.2",
     "isbot": "^3.6.8",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
